plugins {
	id 'org.jetbrains.kotlin.jvm' version '1.9.25'
	id 'org.jetbrains.kotlin.plugin.spring' version '1.9.25'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'org.jetbrains.kotlin.plugin.jpa' version '1.9.25'
	id 'org.graalvm.buildtools.native' version '0.9.28'
}

group = 'com.devtaco'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.fasterxml.jackson.module:jackson-module-kotlin'
	implementation 'org.jetbrains.kotlin:kotlin-reflect'
	
    // H2
    runtimeOnly 'com.h2database:h2'
    
    // Logback
    implementation 'io.github.microutils:kotlin-logging-jvm:3.0.5'

    // Swagger/OpenAPI
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
    
	testImplementation 'org.testcontainers:junit-jupiter'
    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test'
    testImplementation 'org.mockito.kotlin:mockito-kotlin:5.2.1'
    testImplementation 'org.mockito:mockito-core:5.8.0'
    testImplementation 'org.mockito:mockito-inline:5.2.0'
}

tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile) {
    kotlinOptions {
        jvmTarget = "21"  // Kotlin 컴파일러도 Java 21을 타겟으로 설정
        freeCompilerArgs += '-Xjsr305=strict'
    }
}

allOpen {
	annotation 'jakarta.persistence.Entity'
	annotation 'jakarta.persistence.MappedSuperclass'
	annotation 'jakarta.persistence.Embeddable'
}

tasks.named('test') {
	useJUnitPlatform()
	
	// Mockito warning 해결을 위한 JVM 옵션 추가
	jvmArgs '-XX:+EnableDynamicAgentLoading'
	
	// 테스트 실행 시 표준 출력을 콘솔에 표시
	testLogging {
		showStandardStreams = true
		events "passed", "skipped", "failed"
	}
}